<resources>
    <string name="app_name">ToDo</string>
    <string name="welcome">Welcome to ToDo!!!!</string>
    <string name="toggle_dark_mode">Toggle Dark Mode</string>
    <string name="where_to">Where To?</string>
    <string name="completed_entries">Completed Entries</string>
    <string name="todo_list">ToDo List</string>
    <string name="calender">Calendar</string>
    <string name="add_new_entry">Add New Entry</string>
    <string name="title">Title</string>
    <string name="enter_entry_title">Enter Entry Title</string>
    <string name="cancel">Cancel</string>
    <string name="create_entry">Create Entry</string>
    <string name="enter_completion_date_dd_mm">Enter Date </string>
    <string name="date">Deadline/Start Date (Your Choice)</string>
    <string name="completed">Total Completed Entries: 0</string>
</resources>